Fixing issues from web.dev

--- a/themes/0x96/assets/scss/_fonts.scss
+++ b/themes/0x96/assets/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
   font-weight: 400;
   src: url("../fonts/Inter-Regular.woff2") format("woff2"),
     url("../fonts/Inter-Regular.woff") format("woff");
@@ -10,7 +10,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
   font-weight: 400;
   src: url("../fonts/Inter-Italic.woff2") format("woff2"),
     url("../fonts/Inter-Italic.woff") format("woff");
@@ -19,7 +19,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
   font-weight: 600;
   src: url("../fonts/Inter-Medium.woff2") format("woff2"),
     url("../fonts/Inter-Medium.woff") format("woff");
@@ -28,7 +28,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
   font-weight: 600;
   src: url("../fonts/Inter-MediumItalic.woff2") format("woff2"),
     url("../fonts/Inter-MediumItalic.woff") format("woff");
@@ -37,7 +37,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
   font-weight: 800;
   src: url("../fonts/Inter-Bold.woff2") format("woff2"),
     url("../fonts/Inter-Bold.woff") format("woff");
@@ -46,7 +46,7 @@
 @font-face {
   font-family: 'Inter';
   font-style: italic;
-  font-display: auto;
+  font-display: swap;
   font-weight: 800;
   src: url("../fonts/Inter-BoldItalic.woff2") format("woff2"),
     url("../fonts/Inter-BoldItalic.woff") format("woff");
