--- a/themes/0x96/layouts/index.html
+++ b/themes/0x96/layouts/index.html
@@ -1,5 +1,5 @@
 {{- define "main" -}}
-  <main aria-role="main">
+  <main role="main">
     <div>
       <h1>{{- .Site.Params.homeTitle -}}</h1>
       <p>{{- .Site.Params.homeSubtitle -}}</p>
